@@ -1,5 +1,6 @@
 Revision history for HTML::Forms
 
+          - Serialise href attr. Toggle.js unrequires hidden fields
           - Datastructure field has add/remove callbacks
           - Buttons can display as icons
           - Changed event register method name in JS utils
